Remove bundled Chana A logo asset

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Generador de carnets - DAITEC INGENIERIA Y CONSULTORIA S.A.C.</title>
   <link rel="stylesheet" href="styles/app.css" />
   <link rel="stylesheet" href="styles/print.css" media="print" />
+  <link rel="stylesheet" href="assets/modelos-carnet/carnet_chana_a/style.css" />
 
   <!-- SheetJS para leer XLSX (solo navegador) -->
   <script defer src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
